[gd_scene load_steps=31 format=3 uid="uid://dtxgsvi5qkltb"]

[ext_resource type="Script" uid="uid://b0fm3tiij7782" path="res://Scripts/Table/Table.gd" id="1_7wgxd"]
[ext_resource type="PackedScene" uid="uid://cikwpq7gmfthh" path="res://Scenes/Table/nose.tscn" id="2_doyny"]
[ext_resource type="Texture2D" uid="uid://bq6esk7ur5k51" path="res://Sprites/Table/cat_body.png" id="3_c7r1b"]
[ext_resource type="PackedScene" uid="uid://2k40ei7w4s1c" path="res://Scenes/Table/cards_hand.tscn" id="4_ml76t"]
[ext_resource type="PackedScene" uid="uid://c42yp56m6umg" path="res://Scenes/Table/token_spawner.tscn" id="5_c5xd3"]
[ext_resource type="Script" uid="uid://8i5ruje3lq3v" path="res://Scripts/Table/TokenSpawner.gd" id="6_yxfet"]
[ext_resource type="PackedScene" uid="uid://dxgtuiu2e58qa" path="res://Scenes/Table/token.tscn" id="7_d2omj"]
[ext_resource type="PackedScene" uid="uid://b3oyeftvghnow" path="res://Scenes/Table/cards_stack.tscn" id="8_ksj5c"]
[ext_resource type="PackedScene" uid="uid://c1qvodqhuvjxq" path="res://Scenes/Table/cards_line.tscn" id="9_2unbh"]
[ext_resource type="PackedScene" uid="uid://cdcfnxst2dods" path="res://Scenes/Game Logic/CardManager.tscn" id="10_ayloq"]
[ext_resource type="PackedScene" uid="uid://jn7o7q01waf0" path="res://Scenes/Game Logic/GameManager.tscn" id="11_i0r7s"]
[ext_resource type="PackedScene" uid="uid://crjpjpkq5cefd" path="res://Scenes/Game Logic/GameStateManager.tscn" id="12_gq1ci"]
[ext_resource type="PackedScene" uid="uid://4xxewo47h8ay" path="res://Scenes/Game Logic/PlayerActions.tscn" id="13_vxwhn"]
[ext_resource type="PackedScene" uid="uid://dgtvnvliwh4aw" path="res://Scenes/Game Logic/EnemyAI.tscn" id="14_l2sqr"]
[ext_resource type="PackedScene" uid="uid://cqsnixrd8nhfe" path="res://Scenes/Demo/InfoVisualiser.tscn" id="15_ca4so"]
[ext_resource type="Script" uid="uid://bakakojeb88us" path="res://Scripts/Demo/select_color.gd" id="16_0i6yo"]
[ext_resource type="Theme" uid="uid://yerfq4qvcb0i" path="res://Resources/Demo/red_button_theme.tres" id="17_pif5p"]
[ext_resource type="Theme" uid="uid://bn0nt8tywlwfk" path="res://Resources/Demo/blue_button_theme.tres" id="18_n1ac3"]
[ext_resource type="Theme" uid="uid://dclbdlmn1jp4n" path="res://Resources/Demo/green_button_theme.tres" id="19_ld6lk"]
[ext_resource type="Theme" uid="uid://bjxsr2atb27ka" path="res://Resources/Demo/violet_button_theme.tres" id="20_jvbde"]
[ext_resource type="PackedScene" uid="uid://bgjob4hixs50t" path="res://Scenes/Raycasting/RayCastingManager.tscn" id="21_okmg0"]
[ext_resource type="PackedScene" uid="uid://baqct71bfl7sn" path="res://Scenes/Table/Actions/CardsVisulaiser3D.tscn" id="22_1v6a8"]
[ext_resource type="PackedScene" uid="uid://dwy84f8yeffe" path="res://Scenes/Table/Actions/PlayerUIVisualiser3D.tscn" id="23_r00vw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6ax0b"]

[sub_resource type="Animation" id="Animation_bpp0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.261799, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerFakeCamera/PlayerHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cv3oe"]
resource_name = "bend_over"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.5, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.261799, 0, 0), Vector3(-1.39626, 0, 0)]
}

[sub_resource type="Animation" id="Animation_g8tfy"]
resource_name = "sit_back"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, -2), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.39626, 0, 0), Vector3(-0.261799, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lbt75"]
resource_name = "cards_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerFakeCamera/PlayerHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s02ep"]
resource_name = "cards_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerFakeCamera/PlayerHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.466667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g8tfy"]
_data = {
&"RESET": SubResource("Animation_bpp0a"),
&"bend_over": SubResource("Animation_cv3oe"),
&"cards_down": SubResource("Animation_s02ep"),
&"cards_up": SubResource("Animation_lbt75"),
&"sit_back": SubResource("Animation_g8tfy")
}

[node name="Table" type="Node3D"]
script = ExtResource("1_7wgxd")

[node name="RigidBody3D" type="RigidBody3D" parent="."]
mass = 0.001
gravity_scale = 0.0
lock_rotation = true
freeze = true
freeze_mode = 1

[node name="CSGBox3D" type="CSGBox3D" parent="RigidBody3D"]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 0, -2, -2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 0, -2, -2.5)
shape = SubResource("BoxShape3D_6ax0b")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="Nose" parent="Camera3D" instance=ExtResource("2_doyny")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.2)
visible = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, -5)

[node name="Enemy" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, -0.25, -5)
texture = ExtResource("3_c7r1b")

[node name="EnemyFakeCamera" type="Node3D" parent="."]
transform = Transform3D(-1, 2.26267e-08, -8.44439e-08, 0, 0.965926, 0.258819, 8.74228e-08, 0.258819, -0.965926, 0, 0, -5)

[node name="EnemyHand" parent="EnemyFakeCamera" instance=ExtResource("4_ml76t")]
transform = Transform3D(1, 3.19744e-14, -1.74846e-07, -4.52533e-08, 0.965926, -0.258819, 1.68888e-07, 0.258819, 0.965926, 8.74227e-08, 0.258819, -0.965925)
nose_gap = 0.1
init_angle = 5.0
max_angle = 20.0

[node name="EnemyTokenSpawner" parent="." instance=ExtResource("5_c5xd3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, -4.25)
script = ExtResource("6_yxfet")
token_scene = ExtResource("7_d2omj")

[node name="PlayerTokenSpawner" parent="." instance=ExtResource("5_c5xd3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, -1.75)
script = ExtResource("6_yxfet")
token_scene = ExtResource("7_d2omj")

[node name="NewCardsStack" parent="." instance=ExtResource("8_ksj5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.25, -1.5)

[node name="DroppedCardsStack" parent="." instance=ExtResource("8_ksj5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.25, -3.5)

[node name="NonCheckableCardsStack" parent="." instance=ExtResource("8_ksj5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -2.5)

[node name="CheckableCardsLine" parent="." instance=ExtResource("9_2unbh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -1.5, -2.5)

[node name="PlayerScoreCardsStack" parent="." instance=ExtResource("8_ksj5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.25, -1.5)

[node name="EnemyScoreCardsStack" parent="." instance=ExtResource("8_ksj5c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.25, -4)

[node name="CardManager" parent="." instance=ExtResource("10_ayloq")]

[node name="GameManager" parent="." instance=ExtResource("11_i0r7s")]

[node name="GameStateManager" parent="." instance=ExtResource("12_gq1ci")]

[node name="PlayerActions" parent="." instance=ExtResource("13_vxwhn")]

[node name="EnemyAi" parent="." instance=ExtResource("14_l2sqr")]

[node name="InfoVisualiser" parent="." instance=ExtResource("15_ca4so")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlaceCardsButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = -118.0
grow_vertical = 0
text = "Положить карты"

[node name="SelectColor" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("16_0i6yo")

[node name="SelectRed" type="Button" parent="CanvasLayer/SelectColor"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("17_pif5p")

[node name="SelectBlue" type="Button" parent="CanvasLayer/SelectColor"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("18_n1ac3")

[node name="SelectGreen" type="Button" parent="CanvasLayer/SelectColor"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("19_ld6lk")

[node name="SelectViolet" type="Button" parent="CanvasLayer/SelectColor"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("20_jvbde")

[node name="PlayerScore" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1576.0
offset_top = -920.0
offset_right = 1766.0
offset_bottom = -858.0
grow_vertical = 0
text = "Player: 0"

[node name="EnemyScore" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1576.0
offset_top = -1024.0
offset_right = 1766.0
offset_bottom = -962.0
grow_vertical = 0
text = "Enemy: 0"

[node name="PlayerBonuses" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1360.0
offset_top = -920.0
offset_right = 1550.0
offset_bottom = -858.0
grow_vertical = 0
text = "Player: 0"

[node name="EnemyBonuses" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1360.0
offset_top = -1024.0
offset_right = 1550.0
offset_bottom = -962.0
grow_vertical = 0
text = "Enemy: 0"

[node name="DeclareTrustButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1576.0
offset_top = -180.0
offset_right = 1766.0
offset_bottom = -118.0
grow_vertical = 0
text = "Верю!"

[node name="CallBluffButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1576.0
offset_top = -298.0
offset_right = 1766.0
offset_bottom = -236.0
grow_vertical = 0
text = "Не верю!"

[node name="SelectedColor" type="Button" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(50, 50)
offset_left = 216.0
offset_top = 64.0
offset_right = 266.0
offset_bottom = 114.0
theme = ExtResource("17_pif5p")

[node name="LastAction" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(180, 90)
offset_left = 1584.0
offset_top = 256.0
offset_right = 1624.0
offset_bottom = 279.0
size_flags_horizontal = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(180, 90)
offset_left = 1592.0
offset_top = 384.0
offset_right = 1772.0
offset_bottom = 474.0
size_flags_horizontal = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="CardsInDeck" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(180, 90)
offset_left = 1584.0
offset_top = 512.0
offset_right = 1764.0
offset_bottom = 602.0
size_flags_horizontal = 4
horizontal_alignment = 1
autowrap_mode = 2

[node name="ExtraCheckButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1320.0
offset_top = -180.0
offset_right = 1510.0
offset_bottom = -118.0
grow_vertical = 0
text = "Купить проверку"

[node name="RayCastingManager" parent="." instance=ExtResource("21_okmg0")]

[node name="CardsVisulaiser3d" parent="." instance=ExtResource("22_1v6a8")]

[node name="PlayerUiVisualiser3d" parent="." instance=ExtResource("23_r00vw")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g8tfy")
}

[node name="PlayerFakeCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="PlayerHand" parent="PlayerFakeCamera" instance=ExtResource("4_ml76t")]
transform = Transform3D(1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 0, 0, 0)
card_scene = null
